[tool.poetry]
name = "project1-mezhuev-m25-555"
version = "0.1.0"
description = ""
authors = ["subterraneanbob <4823336+subterraneanbob@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
