[tool.poetry]
name = "project1-mezhuev-m25-555"
version = "0.1.0"
description = ""
authors = ["subterraneanbob <4823336+subterraneanbob@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "labyrinth_game" }]


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.scripts]
project = "labyrinth_game.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
